# pyx-rusterizer

./: Cargo.toml
assets/: jehkoba32.txt  palette.toml
assets/porygon/: materials.toml
src/: animation.rs  buffer.rs  color.rs  constants.rs  geo.rs  gui.rs  interpolate.rs  lib.rs  main.rs  model.rs  obj.rs  poly.rs
src/gui/: color_picker.rs
