[package]
name = "pyx-rusterizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assets_manager = { version = "0.12.4", features = ["hot-reloading", "macros", "toml"] }
glam = "0.29.0"
minifb = "0.27.0"
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"
