[package]
name = "pyx-rusterizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assets_manager = { version = "0.12.4", features = ["hot-reloading", "macros", "toml"] }
env_logger = "0.11.5"
glam = "0.29.0"
icecube = { git = "https://github.com/crystalsolenoid/icecube", version = "0.1.0" }
log = "0.4.22"
minifb = "0.27.0"
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"
